# aipress24-doc

./: .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  hop3.toml  mkdocs.yml  pyproject.toml  zensical.toml
overrides/partials/integrations/analytics/: custom.html
scripts/: build_openapi.py
src/: index.md
src/dev/: api.md  architecture.md  database.md  dolibarr.md  financial.md  front-end.md  glossaire.md  glossary.md  index.md  libraries.md  modules.md  notes.md  services.md  tests.md
src/dev/diagrams/c4/: Makefile  README.txt  level1.puml  level2.puml  level3.puml  system-architecture.dsl
src/dev/diagrams/classes/: Makefile  compile.py  content.puml  users.puml  watch.py
src/dev/diagrams/db/: model-simple.puml
src/dev/diagrams/state/: Makefile  topics.puml
src/javascripts/: matomo.js
src/user/: index.md
src/user/en/: business-wall.md  enquiry-notices.md  events.md  features.md  getting-started.md  help.md  index.md  marketplace.md  modules.md  monetisation.md  news.md  notifications.md  profile.md  search.md  social.md  work.md
src/user/fr/: aide.md  avis-enquete.md  business-wall.md  evenements.md  fonctionnalites.md  index.md  marketplace.md  modules.md  monetisation.md  news.md  notifications.md  premiers-pas.md  profil.md  recherche.md  social.md  work.md
