[project]
name = "aipress24-doc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aipress24-flask",
    "mkdocs-material>=9.5.49",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-roamlinks-plugin>=0.3.2",
    # "mkdocs-with-pdf>=0.9.3",
    "mkdocstrings>=0.27.0",
    "sqla2uml>=0.1.4",
]


#[tool.poetry]
#name = "aipress24-doc"
#version = "0.1.0"
#description = ""
#authors = ["Stefane Fermigier <sf@abilian.com>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

mkdocs-material = "^9.5.27"
mkdocs-material-extensions = "^1.3.1"
mkdocs-roamlinks-plugin = "^0.3.2"
#mkdocs-with-pdf = "^0.9.3"
mkdocstrings = { extras = ["python"], version = "*" }
sqla2uml = "^0.1.4"

[tool.uv.sources]
aipress24-flask = { git = "https://github.com/aipress24/aipress24" }

[dependency-groups]
dev = [
    "abilian-devtools>=0.7.6",
]

#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
