[project]
name = "aipress24-doc"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "zensical>=0.0.46",
]

[dependency-groups]
dev = [
    # "abilian-devtools>=0.7.6",
]
# Only needed for (currently disabled) DB diagram generation; granian
# doesn't build on Python 3.14, so keep out of the default sync.
# Install with: uv sync --group diagrams
diagrams = [
    "aipress24-flask",
    "sqla2uml>=0.1.4",
]

[tool.uv.sources]
aipress24-flask = { git = "https://github.com/aipress24/aipress24" }
